# ParaDyMS

./: CMakeLists.txt  OMP_SETTINGS.sh  README.md
data/: karate.edgelist  test.edgelist  wikivote.edgelist
data/Ins50/: del_karate.edgelist  del_wikivote.edgelist  gt_karate.edgelist  gt_wikivote.edgelist  ins_karate.edgelist  ins_wikivote.edgelist
data/static_counts/: static_wikivote.counts
include/: dynamic_counting.hpp  graph.hpp  static_counting.hpp  utils.hpp
src/: generate_graph.cpp  main.cpp
utils/: SplitGraph.py  gen_data.sh  sanitize.py
